Feat: Implement left sidebar navigation
- Added a fully functional left sidebar with interactive navigation links.
- Links in the sidebar are now connected to corresponding pages within the application.

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -7,70 +7,53 @@
 @import url('./sizing.css');
 @import url('./spacing.css');
 @import url('./typography.css');
+@import url('./border.css');
 
-body {
-    font-family: var(--font-family);
-    background-image: url('../assets/image/background.png');
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: right;
-    color: var(--text-color-light);
+
+
+@font-face {
+    font-family: 'HelveticaNenu';
+    src: url('./assets/fonts/HeleticaNenuMedium.otf') format('opentype');
+    font-weight: medium;
     font-style: normal;
 }
 
-.mainPage {
-    display: flex;
+@font-face {
+    font-family: 'HelveticaNenu';
+    src: url('./assets/fonts/HeleticaNenuLight.otf') format('opentype');
+    font-weight: light;
+    font-style: normal;
 }
 
-/* side menu */
-.mainPage>div:first-child {
-    padding: 20px;
-    flex: 2;
-    height: 100vh;
-    width: 100%;
-    background-color: black;
+@font-face {
+    font-family: 'HelveticaNenu';
+    src: url('./assets/fonts/HeleticaNenuBold.otf') format('opentype');
+    font-weight: bold;
+    font-style: normal;
 }
 
-/* right part */
-.mainPage>div:last-child {
-    padding: 20px 40px;
-    flex: 8;
-    height: 100vh;
+@font-face {
+    font-family: 'HelveticaNenu';
+    src: url('./assets/fonts/HeleticaNenuThin.otf') format('opentype');
+    font-weight: thin;
+    font-style: normal;
+}
+
+:root {
+    --font-family: 'HelveticaNenu', sans-serif;
+    --text-color-dark: #4a4a4a;
+    --text-color-light: #F5F5F5F5;
+    --background-color-dark: #575757;
+    --background-color-light: #e9e9e9;
+    --yellow-color: #FFDF9E;
+    --red-color: #aa5a5a;
+    --green-color: #8c9d4e;
+    --blue-color: #356694;
+    --grey-color: #dedede;
+    --deactive-color: #afafaf;
+    --battery-transparent: #8c9d4e, transparent 30%;
+
+    --card2: conic-gradient(from 0deg at 0% 0%, rgba(35, 37, 41, 0.50) 57.62981414794922deg, rgba(46, 48, 52, 0.50) 81.64558947086334deg, rgba(150, 150, 150, 0.50) 304.23447132110596deg);
 
 }
 
-/* real time monitoring main page */
-.realTimeContainer {
-    margin-top: 80px;
-    width: 100%;
-    height: 90%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1.8fr 1.2fr;
-    gap: 20px;
-    row-gap: 30px;
-    grid-template-areas:
-        'smartEnergyShare smartEnergyShare energyFlow'
-        'batteryOverview solarOverview weatherOverview';
-}
-
-.smartEnergyShare {
-    grid-area: smartEnergyShare;
-}
-
-.energyFlow {
-    grid-area: energyFlow;
-}
-
-.batteryOverview {
-    grid-area: batteryOverview;
-}
-
-.solarOverview {
-    grid-area: solarOverview;
-}
-
-.weatherOverview {
-    grid-area: weatherOverview;
-}
