--- a/frontend/src/styles/background.css
+++ b/frontend/src/styles/background.css
@@ -1,3 +1,7 @@
 .background-color-dark{
     background-color: var(--background-color-dark);
 }
+
+.background-color-light{
+    color: var(--background-color-light);
+}
