--- a/frontend/src/styles/flexboxAndGrid.css
+++ b/frontend/src/styles/flexboxAndGrid.css
@@ -1,5 +1,30 @@
-.flex{
+.flex {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.flex-left {
+    display: flex;
+    justify-content: flex-start;
+  
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-column-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.two-column-layout {
+    display: flex;
+    justify-content: space-between;
 }
