--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -1,7 +1,4 @@
-.two-column-layout {
-    display: flex;
-    justify-content: space-between;
-}
+
 
 .centered-content {
     display: flex;
@@ -11,6 +8,12 @@
     width: 100%;
 }
 
+.bottom-centered {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
 
 
 
