--- a/frontend/src/styles/spacing.css
+++ b/frontend/src/styles/spacing.css
@@ -3,22 +3,73 @@
 }
 
 /* margin */
+.mt-100{
+    margin-top: 100px;
+}
+
+.mt-50{
+    margin-top: 50px;
+}
+
+.mt-40{
+    margin-top: 40px;
+}
+
 .mt-30{
     margin-top: 30px;
+}
+
+.mt-20{
+    margin-top: 20px;
 }
 
 .mt-10{
     margin-top: 10px;
 }
 
-.ml-10{
-    margin-left: 10px;
+.mt-8{
+    margin-top: 8px;
+}
+
+
+.ml-100{
+    margin-left: 100px;
+}
+
+.ml-50{
+    margin-left: 50px;
+}
+
+.ml-45{
+    margin-left: 45px;
+}
+
+.ml-30{
+    margin-left: 30px;
+}
+
+.ml-20{
+    margin-left: 20px;
 }
 
 .ml-15{
     margin-left: 15px;
 }
 
-.ml-20{
-    margin-left: 20px;
+.ml-10{
+    margin-left: 10px;
 }
+
+
+.mr-30{
+    margin-right: 30px;
+}
+
+
+/* padding */
+
+.pl-20{
+    padding-left: 20px;
+}
+
+
