--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -1,46 +1,103 @@
-@font-face {
-    font-family: 'HelveticaNenu';
-    src: url('./assets/fonts/HeleticaNenuMedium.otf') format('opentype');
-    font-weight: medium;
+body {
+    font-family: var(--font-family);
+    color: var(--text-color-light);
     font-style: normal;
+    background-image: url('../assets/image/background.png');
+    background-size: 2000px 100vh;
+    background-color: black;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
 }
 
-@font-face {
-    font-family: 'HelveticaNenu';
-    src: url('./assets/fonts/HeleticaNenuLight.otf') format('opentype');
-    font-weight: light;
-    font-style: normal;
+.mainPage {
+    display: flex;
+    width: 2000px;
+    justify-content: center;
 }
 
-@font-face {
-    font-family: 'HelveticaNenu';
-    src: url('./assets/fonts/HeleticaNenuBold.otf') format('opentype');
-    font-weight: bold;
-    font-style: normal;
+/* left part: side menu */
+.mainPage>div:first-child {
+    padding: 20px;
+    margin-left: -10px;
+    flex: 2;
+    height: 95vh;
+    width: 100%;
+    background-color: black;
+    position: relative;
 }
 
-@font-face {
-    font-family: 'HelveticaNenu';
-    src: url('./assets/fonts/HeleticaNenuThin.otf') format('opentype');
-    font-weight: thin;
-    font-style: normal;
+/* search bar */
+.search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    border-radius: 10px;
+    height: 35px;
+    width: 100%;
 }
 
-:root {
-    --font-family: 'HelveticaNenu', sans-serif;
-    --text-color-dark: #4a4a4a;
-    --text-color-light: #F5F5F5F5;
-    --background-color-dark: #575757;
-    --background-color-light: #e9e9e9;
-    --yellow-color: #FFDF9E;
-    --red-color: #aa5a5a;
-    --green-color: #8c9d4e;
-    --blue-color: #356694;
-    --grey-color: #dedede;
-    --deactive-color: #afafaf;
-    --battery-transparent: #8c9d4e, transparent 30%;
-
-    --card2: conic-gradient(from 0deg at 0% 0%, rgba(35, 37, 41, 0.50) 57.62981414794922deg, rgba(46, 48, 52, 0.50) 81.64558947086334deg, rgba(150, 150, 150, 0.50) 304.23447132110596deg);
-
+/* bottom menu */
+.bottom-menu {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 30px;
 }
 
+/* right part */
+.mainPage>div:last-child {
+    padding: 20px 40px;
+    flex: 8;
+    width: 80vw;
+    height: 100vh;
+    flex-shrink: 0;
+    border-radius: 39px;
+    background: rgba(0, 0, 0, 0.05);
+    /* transparent card */
+    box-shadow: 0px 0px 2px 0px rgba(255, 255, 255, 0.70) inset, 1px 1px 1px 0px rgba(255, 255, 255, 0.50) inset, 0px 0px 15px 0px rgba(255, 255, 255, 0.20) inset, 0px 15px 30px 0px rgba(255, 255, 255, 0.20) inset;
+    backdrop-filter: blur(15px);
+}
+
+/* real time monitoring main page */
+.realTimeContainer {
+    margin-top: 30px;
+    width: 100%;
+    height: 90%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1.8fr 1.2fr;
+    gap: 20px;
+    row-gap: 30px;
+    grid-template-areas:
+        'smartEnergyShare smartEnergyShare energyFlow'
+        'batteryOverview solarOverview weatherOverview';
+}
+
+.smartEnergyShare {
+    grid-area: smartEnergyShare;
+}
+
+.energyFlow {
+    grid-area: energyFlow;
+}
+
+.batteryOverview {
+    grid-area: batteryOverview;
+}
+
+.solarOverview {
+    grid-area: solarOverview;
+}
+
+.weatherOverview {
+    grid-area: weatherOverview;
+}
