--- a/frontend/src/styles/flexboxAndGrid.css
+++ b/frontend/src/styles/flexboxAndGrid.css
@@ -7,7 +7,11 @@
 .flex-left {
     display: flex;
     justify-content: flex-start;
-  
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
 }
 
 .flex-column {
