--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -1,5 +1,4 @@
 
-
 .centered-content {
     display: flex;
     justify-content: center;
@@ -13,6 +12,11 @@
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.text-center {
+    text-align: center;
+    width: 100%;
 }
 
 
