--- a/frontend/src/styles/sizing.css
+++ b/frontend/src/styles/sizing.css
@@ -2,6 +2,11 @@
     border-radius: 50%;
 }
 
+.size-70 {
+    width: 70px;
+    height: 70px;
+}
+
 .size-55 {
     width: 55px;
     height: 55px;
