--- a/frontend/src/styles/flexboxAndGrid.css
+++ b/frontend/src/styles/flexboxAndGrid.css
@@ -38,3 +38,9 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.two-column-layout-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
