--- a/frontend/src/styles/sizing.css
+++ b/frontend/src/styles/sizing.css
@@ -2,6 +2,47 @@
     border-radius: 50%;
 }
 
+.width-100{
+    width: 100%;
+}
+
+.width-60{
+    width: 60%;
+}
+
+.width-50{
+    width: 50%;
+}
+
+.width-40{
+    width: 40%;
+}
+
+.height-100{
+    height: 100%;
+}
+
+.height-80{
+    height: 80%;
+}
+
+.height-70{
+    height: 70%;
+}
+
+.height-60{
+    height: 60%;
+}
+
+.height-50{
+    height: 50%;
+}
+.height-40{
+    height: 40%;
+}
+.height-30{
+    height: 30%;
+}
 .size-70 {
     width: 70px;
     height: 70px;
