--- a/frontend/src/styles/spacing.css
+++ b/frontend/src/styles/spacing.css
@@ -44,6 +44,10 @@
     margin-left: 45px;
 }
 
+.ml-40{
+    margin-left: 40px;
+}
+
 .ml-30{
     margin-left: 30px;
 }
@@ -67,6 +71,10 @@
 
 
 /* padding */
+
+.p-50{
+    padding: 50px;
+}
 
 .pl-20{
     padding-left: 20px;
