--- a/frontend/src/styles/sizing.css
+++ b/frontend/src/styles/sizing.css
@@ -6,6 +6,10 @@
     width: 100%;
 }
 
+.width-90{
+    width: 90%;
+}
+
 .width-60{
     width: 60%;
 }
@@ -16,6 +20,18 @@
 
 .width-40{
     width: 40%;
+}
+
+.width-30{
+    width: 30%;
+}
+
+.width-25{
+    width: 25%;
+}
+
+.width-20{
+    width: 20%;
 }
 
 .height-100{
