--- a/frontend/src/styles/sizing.css
+++ b/frontend/src/styles/sizing.css
@@ -9,7 +9,13 @@
 .width-90{
     width: 90%;
 }
+.width-80{
+    width: 80%;
+}
 
+.width-70{
+    width: 70%;
+}
 .width-60{
     width: 60%;
 }
@@ -38,6 +44,9 @@
     height: 100%;
 }
 
+.height-90{
+    height: 90%;
+}
 .height-80{
     height: 80%;
 }
@@ -59,6 +68,11 @@
 .height-30{
     height: 30%;
 }
+
+.height-15{
+    height: 15%;
+}
+
 .size-70 {
     width: 70px;
     height: 70px;
