--- a/frontend/src/styles/spacing.css
+++ b/frontend/src/styles/spacing.css
@@ -35,6 +35,10 @@
     margin-top: 8px;
 }
 
+.mt--20{
+    margin-top: -20px;
+}
+
 
 .ml-100{
     margin-left: 100px;
@@ -89,4 +93,7 @@
     padding-left: 20px;
 }
 
+.line-gap-30{
+    line-height: 30px;
+}
 
