--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     justify-content: center;
     min-height: 100vh;
-    
+
 }
 
 .mainPage {
@@ -101,4 +101,10 @@ body {
 
 .weatherOverview {
     grid-area: weatherOverview;
+}
+
+
+.navigation-menu {
+    border-radius: 8px;
+    background: linear-gradient(270deg, #30373D 0%, #282F39 31%, #5E6671 62.5%, #323941 100%);
 }
