--- a/frontend/src/styles/flexboxAndGrid.css
+++ b/frontend/src/styles/flexboxAndGrid.css
@@ -44,3 +44,9 @@
     justify-content: space-between;
     align-items: flex-start;
 }
+
+/* selfAlign */
+.self-end {
+    align-self: flex-end;
+    margin-left: auto;
+}
