--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -104,3 +104,18 @@ body {
 }
 
 
+.eer-bar {
+    width: 300px;
+    height: 20px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: linear-gradient(90deg, var(--red-color, #AA5A5A) 9.24%, #D29969 34.16%, var(--yellow-color, #FFDF79) 50%, #C9C065 62.39%, var(--green-color, #8C9D4E) 83.05%);
+}
+
+.eer-line {
+    width: 300px;
+    height: 1px;
+    background: var(--text-color-light, #F5F5F5);
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
