--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -19,6 +19,33 @@
     width: 100%;
 }
 
+.top-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.top-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.bottom-right {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.bottom-left {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.relative {
+    position: relative;
+}
 
 
 
