--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -129,21 +129,28 @@ body {
 }
 
 .energy-forecast {
-    border-radius: 4px;
+    border-radius: 5px;
     background: var(--green, #8C9D4E);
     width: 80%;
-    height: 30px;
+    height: 35px;
 }
 
 .base-line {
-    border-radius: 4px 0px 0px 4px;
+    border-radius: 5px 0px 0px 5px;
     background: var(--card, linear-gradient(320deg, rgba(121, 130, 143, 0.50) 32.97%, rgba(96, 103, 113, 0.70) 50.86%, rgba(64, 69, 76, 0.80) 73.2%, #232529 93.88%));
     width: 20%;
-    height: 30px;
+    height: 35px;
 }
 
 .energy-forecast-line {
     background: var(--selected, linear-gradient(138deg, #ABBAAB 0%, #FFF 95.72%));
     width: 1px;
     height: 30px;
+}
+
+.energy-flow-line {
+    position: absolute;
+    width: 20px;
+    height: 30px;
+    flex-shrink: 0;
 }
