--- a/frontend/src/styles/typography.css
+++ b/frontend/src/styles/typography.css
@@ -59,6 +59,13 @@
     letter-spacing: 0.5px;
 }
 
+.font-10 {
+    font-size: 10px;
+    font-weight: 300;
+    line-height: 10px;
+    letter-spacing: 0.5px;
+}
+
 .color-green{
     color: var(--green-color);
 }
